<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CeroBaches</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Acceder</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="title_activity_orden">OrdenActivity</string>
    <string name="idSolicitud">Solicitud #:</string>
    <string name="estado">Estatus:</string>
    <string name="direccion">Direccion:</string>
    <string name="referencia">Referencia:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="reporte">Hacer Reporte</string>
    <string name="title_activity_iniciar_reporte">IniciarReporteActivity</string>
    <string name="iniciar_reporte">Iniciar Reporte</string>
    <string name="finalizar_reporte">Finalizar Reporte</string>
    <string name="title_activity_concluir_reporte">ConcluirReporteActivity</string>
    <string name="numero_de_costales"># de costales</string>
    <string name="comentarios">Comentarios:</string>
    <string name="calle">Calle</string>
    <string name="colonia">Colonia</string>
    <string name="municipio">Minicipio</string>
    <string name="entidad">Entidad</string>
    <string name="cp">CP</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="crear">Crear</string>
    <string name="title_activity_nueva_solicitud">NuevaSolicitudActivity</string>

</resources>
