<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="11" >

    <EditText
        android:id="@+id/nueva_solicitud_edit_calle"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/calle" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/nueva_solicitud_edit_colonia"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/colonia" />

    <EditText
        android:id="@+id/nueva_solicitud_edit_municipio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/municipio"
        android:inputType="textPostalAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/nueva_solicitud_edit_entidad"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/entidad"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/nueva_solicitud_edit_cp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/cp" />

    </LinearLayout>

    <EditText
        android:id="@+id/nueva_solicitud_edit_descripcion"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/nueva_solicitud_edit_referencia"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/referencia" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/nueva_solicitud_edit_latitud"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/latitud"
            android:inputType="number"
            android:enabled="false" />

        <EditText
            android:id="@+id/nueva_solicitud_edit_longitud"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/longitud"
            android:inputType="number"
            android:enabled="false" />
		
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/nueva_solicitud_image_foto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/tomar_foto" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal" >
	
	        <Button
	            android:id="@+id/nueva_solicitud_button_crear"
	            android:layout_width="0sp"
	            android:layout_height="wrap_content"
	            android:text="@string/crear"
	            android:layout_weight="1" />
	
	        <Button
	            android:id="@+id/nueva_solicitud_button_tomar_foto"
	            android:layout_width="0sp"
	            android:layout_height="wrap_content"
	            android:text="@string/tomar_foto"
	            android:layout_weight="1" />
		</LinearLayout>
</LinearLayout>